@@ -1,6 +1,7 @@
 Upcoming:
 - Fixed the simple dialer model
 - Fixed a problem in the crafter where the filter slot would accept anything with item automation
+- Re-implemented the filter module for the crafter
 
 1.2.14:
 - Disabled truetype for now until the forge bug has been resolved
